[project]
name = "NoitaEyePy"
version = "0.0.1"
authors = [
  { name="FortunesFavorite", email="author@example.com" },
]
description = "A package for working with the noita eye glyphs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/FortunesFavored/NoitaEyePy"
"Bug Tracker" = "https://github.com/FortunesFavored/NoitaEyePy/issues"